fixed php icon spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -179,7 +179,7 @@ h4 {
 .tech-container {
   display: flex;
   flex-flow: wrap;
-  align-items: baseline;
+  // align-items: baseline;
   justify-content: space-between;
 }
 
@@ -204,6 +204,16 @@ h4 {
   text-align: center;
 }
 
+#php-icon {
+  width: 100px;
+  height: 50px;
+  margin-top: auto;
+}
+
+#php-caption {
+  margin-top: auto;
+}
+
 @media only screen and (max-width: 1300px) {
   #skills {
     margin: 0 0 200px 0;
@@ -219,6 +229,11 @@ h4 {
 
   .skill-caption {
     font-size: 0.9rem;
+  }
+
+  #php-icon {
+    height: 25px;
+    width: 50px;
   }
 }
 
